--- a/packages/react-app/src/styles/index.css
+++ b/packages/react-app/src/styles/index.css
@@ -50,7 +50,7 @@ body {
 .container2 {
   position: relative;
   width: 100vh;
-  height: 70vh;
+  height: 75vh;
   border-radius: 20px;
   padding: 2em;
   box-sizing: border-box;
@@ -82,6 +82,29 @@ code {
   border-radius: 50%;
   box-sizing: border-box;
   box-shadow: 7px 7px 10px #0f6164, -7px -7px 10px #13a7ac;
+}
+
+.VerifyPlace {
+  height: 100px;
+  width: 100px;
+  background-size: 100px;
+  margin: auto;
+  border-radius: 50%;
+  box-sizing: border-box;
+  font-size: 4em;
+  box-shadow: 7px 7px 10px #0f6164, -7px -7px 10px #13a7ac;
+}
+
+.PlaceData {
+  display: grid;
+  column-gap: 1em;
+  grid-template-columns: 1fr 1fr 1fr;
+  font-size: 1.2em;
+  margin-bottom: 2em;
+  background-color: #19191a71;
+  text-align: left;
+  padding: 0.5em;
+  border-radius: 15px;
 }
 
 .NewGame-title {
@@ -189,7 +212,7 @@ select option:checked {
   color: white;
   margin-top: 1.5em;
   padding: 0.4em;
-  background: #01304E;
+  background: #124b6e;
   height: 50px;
   border-radius: 20px;
   cursor: pointer;
@@ -198,13 +221,19 @@ select option:checked {
 }
 
 .UploadBt:hover {
-  background-color: #124b6e;
+  background-color: #01304E;
 }
 
 
 input[type="file"]:hover {
   cursor: pointer !important;
   position: relative;
+}
+
+.file {
+  background-color: #d4d4d431;
+  padding: 1em;
+  border-radius: 15px;
 }
 
 .CreatePL {
