--- a/packages/react-app/src/styles/index.css
+++ b/packages/react-app/src/styles/index.css
@@ -57,6 +57,18 @@ body {
   background: #119195;
 }
 
+.container3 {
+  position: relative;
+  width: 100vh;
+  height: 75vh;
+  border-radius: 20px;
+  padding: 2em;
+  box-sizing: border-box;
+  background: linear-gradient(150deg, #F6AF55, #F6AF55,#119195, #119195);
+  background-size: 200% 200%;
+  animation: gradient 3s ease-in-out infinite;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
@@ -95,6 +107,17 @@ code {
   box-shadow: 7px 7px 10px #0f6164, -7px -7px 10px #13a7ac;
 }
 
+.UpgradePlace {
+  height: 100px;
+  width: 100px;
+  background-size: 100px;
+  margin: auto;
+  border-radius: 50%;
+  box-sizing: border-box;
+  font-size: 4em;
+  background-color: #19191a71;
+}
+
 .PlaceData {
   display: grid;
   column-gap: 1em;
@@ -106,6 +129,95 @@ code {
   padding: 0.5em;
   border-radius: 15px;
 }
+
+.Deposit2Up {
+  display: grid;
+  column-gap: 1em;
+  grid-template-columns: 1fr 1fr;
+  font-size: 1.2em;
+  margin-bottom: 2em;
+  padding: 0.5em;
+  border-radius: 15px;
+}
+
+.Energy2Up {
+  background-color: #19191a71;
+  border-radius: 15px;
+  font-size: 2em;
+  padding: 1em;
+}
+
+
+.Chips2Up {
+  background-color: #19191a71;
+  border-radius: 15px;
+  font-size: 2em;
+  padding: 1em;
+}
+
+.EnergyUnit {
+  padding: 1em 3em 0 3em;
+  color: #01304E !important;
+}
+
+.EnergyUnit::after {
+  font-size: 1em;
+  content: '⚡';
+  color: #01304E;
+  position: absolute;
+  right: 20em;
+  top: 10.75em;
+}
+
+.EnergyBt {
+  width: 100%;
+  height: 40px;
+  background-image: linear-gradient(#F6AF55, #f6b0557c);
+  border: none;
+  border-radius: 25px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 0.8em;
+  text-align: center;
+  transition: 1s;
+}
+
+.EnergyBt:hover {
+  background-image: linear-gradient(#01304E, #01314ea4);
+}
+
+
+.ChipsUnit {
+  padding: 1em 3em 0 3em;
+  color: #01304E !important;
+}
+
+.ChipsUnit::after {
+  font-size: 1em;
+  content: '💽';
+  color: #01304E;
+  position: absolute;
+  right: 6em;
+  top: 10.75em;
+}
+
+.ChipsBt {
+  width: 100%;
+  height: 40px;
+  background-image: linear-gradient(#119195, #11919573);
+  border: none;
+  border-radius: 25px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 0.8em;
+  text-align: center;
+  transition: 1s;
+}
+
+.ChipsBt:hover {
+  background-image: linear-gradient(#01304E, #01314ea4);
+}
+
 
 .NewGame-title {
   margin-top: 10px;
@@ -234,6 +346,18 @@ input[type="file"]:hover {
   background-color: #d4d4d431;
   padding: 1em;
   border-radius: 15px;
+}
+
+.LevelBlock {
+  color: white;
+  margin-top: 1.5em;
+  padding: 0.4em;
+  background: #192024;
+  height: 50px;
+  border-radius: 20px;
+  cursor: not-allowed;
+  transition: 0.5s;
+  font-size: 1.5em;
 }
 
 .CreatePL {
