--- a/packages/react-app/src/styles/index.css
+++ b/packages/react-app/src/styles/index.css
@@ -26,9 +26,16 @@ body {
   background-image: url(https://punkcities.mypinata.cloud/ipfs/QmQDqAE5aHtQNwuP9kXKkHQeP1Q7Hkgz2xmUUnVVBBKmLL);
 }
 
+.HomeCon {
+  padding: 6em 30em 0 30em;
+}
+
+.HomeScreen {
+  height: 70vh;
+  margin-bottom: 4em;
+}
+
 .NewGame {
-  width: 100vw;
-  height: 80vh;
   align-items: center;
   text-align: center;
   justify-content: center;
@@ -37,11 +44,38 @@ body {
   font-family: 'Exo 2';
 }
 
+.HomeDiv {
+  display: grid;
+  grid-template-columns: 2fr 5fr;
+  padding: 5em 30em 5em 30em ;
+  border-radius: 25px;
+  height: 95vh;
+  margin-top: 2em;
+}
+
+.NewGameBt {
+  color: #01304E;
+  padding: 1em;
+  background: linear-gradient(150deg, #F6AF55, #F6AF55,#119195, #119195);
+  background-size: 200% 200%;
+  animation: gradient 3s ease-in-out infinite;
+  height: 50px;
+  border-radius: 25px;
+  cursor: pointer;
+  transition: 0.5s;
+  font-size: 1.5em;
+}
+  
+  .NewGameBt:hover {
+    background: linear-gradient(150deg, #8C8985, #8C8985,#8C8985, #8C8985);
+    color: #fff;
+  }
+
 .container {
   position: relative;
-  width: 50vh;
-  height: 70vh;
-  border-radius: 20px;
+  width: 100%;
+  height: 100%;
+  border-radius: 0px px px 0px;
   padding: 40px;
   box-sizing: border-box;
   background: #f6b055;
@@ -49,9 +83,9 @@ body {
 
 .container2 {
   position: relative;
-  width: 100vh;
-  height: 75vh;
-  border-radius: 20px;
+  width: 100%;
+  height: 100%;
+  border-radius: 0px 25px 25px 0;
   padding: 2em;
   box-sizing: border-box;
   background: #119195;
@@ -59,8 +93,8 @@ body {
 
 .container3 {
   position: relative;
-  width: 100vh;
-  height: 75vh;
+  width: 100%;
+  height: 100%;
   border-radius: 20px;
   padding: 2em;
   box-sizing: border-box;
@@ -164,9 +198,9 @@ code {
   font-size: 1em;
   content: '⚡';
   color: #01304E;
-  position: absolute;
-  right: 20em;
-  top: 10.75em;
+  position: relative;
+  right: -2.5em;
+  top: -2.5em;
 }
 
 .EnergyBt {
@@ -196,9 +230,9 @@ code {
   font-size: 1em;
   content: '💽';
   color: #01304E;
-  position: absolute;
-  right: 6em;
-  top: 10.75em;
+  position: relative;
+  right: -2.5em;
+  top: -2.5em;
 }
 
 .ChipsBt {
@@ -251,7 +285,7 @@ label, input {
 
 label {
   color: #ffffff;
-  font-size: 1.5em;
+  font-size: 1.2em;
 }
 
 input::placeholder {
@@ -402,7 +436,7 @@ h1 {
   padding: 5em 5em 5em 5em ;
   border-radius: 25px;
   height: 95vh;
-  margin-top: -3em;
+  margin-top: 2em;
 }
 
 .CityDivAll {
@@ -412,7 +446,7 @@ h1 {
   padding: 5em 5em 5em 5em ;
   border-radius: 25px;
   height: 95vh;
-  margin-top: -3em;
+  margin-top: 3em;
 }
 
 .CityMenu {
@@ -564,6 +598,17 @@ h1 {
   background: #cbced11e;
   border-radius: 20px;
   cursor: pointer;
+  transition: 0.5s;
+  font-size: 1.5em;
+  text-align: left;
+}
+
+.CityBTBl {
+  padding: 0.5em;
+  height: 100%;
+  background: #192024;
+  cursor: not-allowed;
+  border-radius: 20px;
   transition: 0.5s;
   font-size: 1.5em;
   text-align: left;
