theme switch off

--- a/packages/react-app/src/themes/dark-theme.less
+++ b/packages/react-app/src/themes/dark-theme.less
@@ -1,9 +1,10 @@
 @import "~antd/lib/style/color/colorPalette.less";
 @import "~antd/dist/antd.less";
-@import "~antd/lib/style/themes/dark.less";
+@import "~antd/lib/style/themes/default.less";
+
 
 // These are shared variables that can be extracted to their own file
-@primary-color: #2caad9;
+@primary-color: #fff;
 @border-radius-base: 4px;
 
 @component-background: #212121;
@@ -14,8 +15,8 @@
 @table-header-sort-active-bg: #424242;
 @card-skeleton-bg: #424242;
 @skeleton-color: #424242;
-@table-header-sort-active-bg: #424242;
+@table-header-sort-active-bg: #fff;
 
 .highlight {
-  background-color: #3f3f3f;
+  background-color: #fff;
 }
