--- a/packages/react-app/src/styles/index.css
+++ b/packages/react-app/src/styles/index.css
@@ -44,18 +44,13 @@ body {
   margin: 0;
   width: 100vw;
   height: 100vh;
-  
   font-family: 'Exo 2';
-  background-image: url(https://punkcities.mypinata.cloud/ipfs/QmQDqAE5aHtQNwuP9kXKkHQeP1Q7Hkgz2xmUUnVVBBKmLL);
+  background: linear-gradient(45deg, #124b6e, #124b6e,#012942, #012942);
 }
 
 .HomeCon {
-  padding: 6em 30em 0 30em;
-}
-
-.HomeScreen {
-  height: 70vh;
-  margin-bottom: 4em;
+  padding: 6em 0em 0 0em;
+  text-align: center;
 }
 
 .NewGame {
@@ -94,7 +89,7 @@ body {
   border-radius: 25px;
   cursor: pointer;
   transition: 0.5s;
-  font-size: 1.5em;
+  font-size: clamp(2em, -1.2em + 2vw, 2.35rem);
 }
   
   .NewGameBt:hover {
