--- a/packages/react-app/src/styles/Breakpoints.css
+++ b/packages/react-app/src/styles/Breakpoints.css
@@ -11,12 +11,43 @@
     margin: 8em 0 4em 0;
   }
 
+  .HomeDiv {
+    grid-template-rows: 2fr 5fr;
+    
+  }
+
+  .CityMenu {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 125px 125px;
+    
+  }
+
+  .container {
+    border-radius: 25px;
+    margin: 1em;
+  }
 }
 
 @media only screen and (min-width: 600px) {
   .HomeScreen {
     width: 50em;
     margin: 8em 0 4em 0;
+  }
+
+  .HomeDiv {
+    grid-template-rows: 2fr 5fr;
+    
+  }
+
+  .CityMenu {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 125px 125px;
+    background-color: none;
+  }
+
+  .container {
+    border-radius: 25px;
+    margin: 1em;
   }
 }
 
@@ -37,5 +68,14 @@
 
   .HomeScreen {
     margin: 0em 0 4em 0;
+  }
+
+  .HomeDiv {
+    grid-template-columns: 2fr 5fr;
+    padding: 5em 25em 5em 25em ;
+  }
+
+  .CityMenu {
+    background-color: #cbced10c;
   }
 }
