--- a/packages/react-app/src/styles/index.css
+++ b/packages/react-app/src/styles/index.css
@@ -64,10 +64,8 @@ body {
 
 .HomeDiv {
   display: grid;
-  grid-template-columns: 2fr 5fr;
-  padding: 5em 30em 5em 30em ;
   border-radius: 25px;
-  height: 95vh;
+  
   margin-top: 2em;
 }
 
@@ -75,8 +73,8 @@ body {
   position: absolute;
   bottom: 0.2em;
   right:  0.2em;
-  height: 70% !important;
-  z-index: 1 !important;
+  height: 70%;
+  z-index: -1;
 }
 
 .NewGameBt {
@@ -101,7 +99,7 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
-  border-radius: 0px px px 0px;
+  border-radius: 0 25px 25px 0px;
   padding: 40px;
   box-sizing: border-box;
   background: #f6b055;
@@ -475,7 +473,7 @@ h1 {
 }
 
 .CityMenu {
-  background-color: #cbced10c;
+  
   border-radius: 25px 0px 0px 25px;
   display: grid;
   grid-template-rows: repeat(auto-fit, minmax(50px, 1fr));
