--- a/packages/react-app/src/styles/index.css
+++ b/packages/react-app/src/styles/index.css
@@ -1,51 +1,50 @@
-@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,300;0,500;0,800;1,400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,300;0,500;0,800;1,400&display=swap");
 
 @keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 a {
-    
-  color: #FFF;
+  color: #fff;
 }
 
 a:link {
-  color: #FFF;
+  color: #fff;
   border: none;
 }
 
-a:active{
-  color: #01304E !important;
+a:active {
+  color: #01304e !important;
 }
 
 a:visited {
-  color: #FFF;
+  color: #fff;
 }
 
 a:hover {
   text-decoration: none;
-  color: #01304E;
+  color: #01304e;
 }
 
 .App {
   text-align: center;
-  font-family: 'Exo 2';
+  font-family: "Exo 2";
 }
 
 body {
   margin: 0;
   width: 100vw;
   height: 100vh;
-  font-family: 'Exo 2';
-  background: linear-gradient(45deg, #124b6e, #124b6e,#012942, #012942);
+  font-family: "Exo 2";
+  background: linear-gradient(45deg, #124b6e, #124b6e, #012942, #012942);
 }
 
 .HomeCon {
@@ -59,13 +58,13 @@ body {
   justify-content: center;
   place-items: center;
   display: flex;
-  font-family: 'Exo 2';
+  font-family: "Exo 2";
 }
 
 .HomeDiv {
   display: grid;
   grid-template-columns: 2fr 5fr;
-  padding: 5em 30em 5em 30em ;
+  padding: 5em 30em 5em 30em;
   border-radius: 25px;
   height: 95vh;
   margin-top: 2em;
@@ -74,15 +73,15 @@ body {
 .homevan {
   position: absolute;
   bottom: 0.2em;
-  right:  0.2em;
+  right: 0.2em;
   height: 70% !important;
   z-index: 1 !important;
 }
 
 .NewGameBt {
-  color: #01304E;
+  color: #01304e;
   padding: 1em;
-  background: linear-gradient(150deg, #F6AF55, #F6AF55,#119195, #119195);
+  background: linear-gradient(150deg, #f6af55, #f6af55, #119195, #119195);
   background-size: 200% 200%;
   animation: gradient 3s ease-in-out infinite;
   height: 50px;
@@ -91,11 +90,11 @@ body {
   transition: 0.5s;
   font-size: clamp(2em, -1.2em + 2vw, 2.35rem);
 }
-  
-  .NewGameBt:hover {
-    background: linear-gradient(150deg, #8C8985, #8C8985,#8C8985, #8C8985);
-    color: #fff;
-  }
+
+.NewGameBt:hover {
+  background: linear-gradient(150deg, #8c8985, #8c8985, #8c8985, #8c8985);
+  color: #fff;
+}
 
 .container {
   position: relative;
@@ -124,7 +123,7 @@ body {
   border-radius: 20px;
   padding: 2em;
   box-sizing: border-box;
-  background: linear-gradient(150deg, #F6AF55, #F6AF55,#119195, #119195);
+  background: linear-gradient(150deg, #f6af55, #f6af55, #119195, #119195);
   background-size: 200% 200%;
   animation: gradient 3s ease-in-out infinite;
 }
@@ -132,7 +131,6 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
-
 
 .NewPlayer {
   height: 100px;
@@ -207,7 +205,6 @@ code {
   padding: 1em;
 }
 
-
 .Chips2Up {
   background-color: #19191a71;
   border-radius: 15px;
@@ -217,13 +214,13 @@ code {
 
 .EnergyUnit {
   padding: 1em 3em 0 3em;
-  color: #01304E !important;
+  color: #01304e !important;
 }
 
 .EnergyUnit::after {
   font-size: 1em;
-  content: '⚡';
-  color: #01304E;
+  content: "⚡";
+  color: #01304e;
   position: relative;
   right: -2.5em;
   top: -2.5em;
@@ -232,7 +229,7 @@ code {
 .EnergyBt {
   width: 100%;
   height: 40px;
-  background-image: linear-gradient(#F6AF55, #f6b0557c);
+  background-image: linear-gradient(#f6af55, #f6b0557c);
   border: none;
   border-radius: 25px;
   color: #fff;
@@ -243,19 +240,18 @@ code {
 }
 
 .EnergyBt:hover {
-  background-image: linear-gradient(#01304E, #01314ea4);
+  background-image: linear-gradient(#01304e, #01314ea4);
 }
-
 
 .ChipsUnit {
   padding: 1em 3em 0 3em;
-  color: #01304E !important;
+  color: #01304e !important;
 }
 
 .ChipsUnit::after {
   font-size: 1em;
-  content: '💽';
-  color: #01304E;
+  content: "💽";
+  color: #01304e;
   position: relative;
   right: -2.5em;
   top: -2.5em;
@@ -275,32 +271,32 @@ code {
 }
 
 .ChipsBt:hover {
-  background-image: linear-gradient(#01304E, #01314ea4);
+  background-image: linear-gradient(#01304e, #01314ea4);
 }
-
 
 .NewGame-title {
   margin-top: 10px;
   font-weight: 900;
   font-size: 2em;
-  color: #01304E;
+  color: #01304e;
 }
 
 .inputs {
   text-align: left;
-  margin-top:2em;
-  color: #01304E;
+  margin-top: 2em;
+  color: #01304e;
 }
 
 .inputs2 {
   text-align: left;
-  color: #01304E;
+  color: #01304e;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 2em;
 }
 
-label, input {
+label,
+input {
   display: block;
   width: 100%;
   padding: 0;
@@ -328,13 +324,13 @@ input {
   color: #119195 !important;
 }
 
-select  {
+select {
   font-size: 1.2em !important;
   box-shadow: none !important;
   background-color: transparent !important;
   border: 0 !important;
   border-width: 0 !important;
-  color: #01304E !important;
+  color: #01304e !important;
 }
 
 select option {
@@ -343,30 +339,24 @@ select option {
   border-width: 0 !important;
 }
 
-
 option {
-padding: 0.2em !important;
-
+  padding: 0.2em !important;
 }
 
-option:disabled:checked { 
+option:disabled:checked {
   border: 0 !important;
 }
 
-
-
 select option:checked {
-  background: #119195 -webkit-linear-gradient(bottom, #F6AF55 0%, #F6AF55 100%) !important;
-  color: #F6AF55 !important;
+  background: #119195 -webkit-linear-gradient(bottom, #f6af55 0%, #f6af55 100%) !important;
+  color: #f6af55 !important;
 }
-
-
 
 .CreateAcc {
   color: white;
   margin-top: 2em;
   padding: 0.4em;
-  background: #01304E;
+  background: #01304e;
   height: 50px;
   border-radius: 20px;
   cursor: pointer;
@@ -377,7 +367,6 @@ select option:checked {
 .CreateAcc:hover {
   background-color: #124b6e;
 }
-
 
 .UploadBt {
   color: white;
@@ -392,9 +381,8 @@ select option:checked {
 }
 
 .UploadBt:hover {
-  background-color: #01304E;
+  background-color: #01304e;
 }
-
 
 input[type="file"]:hover {
   cursor: pointer !important;
@@ -419,11 +407,27 @@ input[type="file"]:hover {
   font-size: 1.5em;
 }
 
+.LevelUnblock {
+  color: white;
+  margin-top: 1.5em;
+  padding: 0.4em;
+  cursor: pointer;
+  background: #192024;
+  height: 50px;
+  border-radius: 20px;
+  transition: 0.5s;
+  font-size: 1.5em;
+}
+
+.LevelUnblock:hover {
+  background-color: #6a7075;
+}
+
 .CreatePL {
   color: white;
   margin-top: 1.5em;
   padding: 0.4em;
-  background: #01304E;
+  background: #01304e;
   height: 50px;
   border-radius: 20px;
   cursor: pointer;
@@ -441,7 +445,6 @@ h1 {
   left: 0;
 }
 
-
 /* Places grid */
 
 .Solarpunk {
@@ -458,7 +461,7 @@ h1 {
   display: grid;
   grid-template-columns: 2fr 5fr 5fr;
   grid-template-rows: 0.3fr 10fr;
-  padding: 5em 5em 5em 5em ;
+  padding: 5em 5em 5em 5em;
   border-radius: 25px;
   height: 95vh;
   margin-top: 2em;
@@ -468,7 +471,7 @@ h1 {
   display: grid;
   grid-template-columns: 2fr 10fr;
   grid-template-rows: 0.3fr 10fr;
-  padding: 5em 5em 5em 5em ;
+  padding: 5em 5em 5em 5em;
   border-radius: 25px;
   height: 95vh;
   margin-top: 3em;
@@ -489,7 +492,7 @@ h1 {
   background-color: #f6b05552;
   border-radius: 0px 0px 0px 0px;
   display: grid;
-  align-items: center;  
+  align-items: center;
   padding: 2em;
   grid-gap: 1em;
   grid-template-columns: 1fr 1fr 1fr;
@@ -500,7 +503,7 @@ h1 {
   background-color: #11919552;
   border-radius: 0px 25px 25px 0px;
   display: grid;
-  align-items: center;  
+  align-items: center;
   padding: 2em;
   grid-gap: 1em;
   grid-template-columns: 1fr 1fr 1fr;
@@ -511,7 +514,7 @@ h1 {
   background-color: #cbced10c;
   border-radius: 0px 25px 25px 0px;
   display: grid;
-  align-items: center;  
+  align-items: center;
   padding: 2em;
   grid-gap: 1em;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -538,7 +541,6 @@ h1 {
   font-size: 1.5em;
   grid-gap: 1em;
   margin-bottom: 1.3em;
-  
 }
 
 .GMaps {
@@ -570,7 +572,7 @@ h1 {
 .VerBt {
   background-color: #cbced11e;
   border-radius: 25px;
-  padding: 1.em 0em 1.4em 0em;
+  padding: 1em 0em 1.4em 0em;
   font-size: 1.5em;
 }
 
@@ -591,17 +593,17 @@ h1 {
   background-color: #cbced10c;
   border-radius: 0px 25px 25px 0px;
   display: grid;
-  align-items: center;  
+  align-items: center;
   padding: 2em;
   grid-gap: 1em;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 0.5fr .5fr 3fr;
+  grid-template-rows: 0.5fr 0.5fr 3fr;
 }
 
 .Verigrid {
   display: grid;
   grid-template-columns: 3fr 1fr 0.5fr 0.5fr 0.5fr;
-  grid-template-rows: repeat(auto-fit, minmax(25px, .5fr));
+  grid-template-rows: repeat(auto-fit, minmax(25px, 0.5fr));
   grid-column: span 3;
   font-size: 1.5em;
   background-color: #cbced10c;
@@ -650,7 +652,7 @@ h1 {
   font-size: 1.4em;
 }
 
-.QuestIc{
+.QuestIc {
   font-size: 3em;
 }
 
@@ -711,20 +713,20 @@ h1 {
   background: #f6b055b2;
   border-radius: 0 0px 25px 25px;
   font-size: 0.8em;
-  color: #01304E;
+  color: #01304e;
 }
 
 .PLfooterUn {
   display: grid;
   grid-template-columns: 1fr;
-  padding: 0.25em 0.5em .65em 0.5em;
+  padding: 0.25em 0.5em 0.65em 0.5em;
   bottom: 0px;
   width: 100%;
   position: absolute;
   background: #cbced1b2;
   border-radius: 0 0px 25px 25px;
   font-size: 1em;
-  color: #01304E;
+  color: #01304e;
 }
 
 .PLfooterUp {
@@ -734,7 +736,7 @@ h1 {
   bottom: 0px;
   width: 100%;
   position: absolute;
-  background: linear-gradient(45deg, #01304E, #01304E,#119195, #119195);
+  background: linear-gradient(45deg, #01304e, #01304e, #119195, #119195);
   background-size: 200% 200%;
   animation: gradient 2s ease-in-out infinite;
   border-radius: 0 0px 25px 25px;
@@ -758,6 +760,3 @@ h1 {
   height: 100%;
   color: #fff;
 }
-
-
-
