--- a/packages/react-app/src/styles/index.css
+++ b/packages/react-app/src/styles/index.css
@@ -42,9 +42,8 @@ a:hover {
 body {
   margin: 0;
   width: 100vw;
-  height: 100vh;
   font-family: "Exo 2";
-  background: linear-gradient(45deg, #124b6e, #124b6e, #012942, #012942);
+
 }
 
 .HomeCon {
@@ -68,6 +67,14 @@ body {
 }
 
 .homevan {
+  position: absolute;
+  bottom: 0.2em;
+  right:  0.2em;
+  height: 60%;
+  z-index: -1;
+}
+
+.homevan2 {
   position: absolute;
   bottom: 0.2em;
   right:  0.2em;
@@ -97,8 +104,7 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
-  border-radius: 0 25px 25px 0px;
-  padding: 40px;
+  padding: 5em 5em 5em 5em;
   box-sizing: border-box;
   background: #f6b055;
 }
@@ -176,8 +182,8 @@ code {
 .PlaceData {
   display: grid;
   column-gap: 1em;
-  grid-template-columns: 1fr 1fr 1fr;
-  font-size: 1.2em;
+  grid-template-columns: 1fr;
+  font-size: 1.5em;
   margin-bottom: 2em;
   background-color: #19191a71;
   text-align: left;
@@ -456,29 +462,23 @@ h1 {
 
 .CityDiv {
   display: grid;
-  grid-template-columns: 2fr 5fr 5fr;
   grid-template-rows: 0.3fr 10fr;
-  padding: 5em 5em 5em 5em;
+  padding: 3em 3em 3em 3em;
   border-radius: 25px;
-  height: 95vh;
   margin-top: 2em;
 }
 
 .CityDivAll {
   display: grid;
-  grid-template-columns: 2fr 10fr;
-  grid-template-rows: 0.3fr 10fr;
   padding: 5em 5em 5em 5em;
   border-radius: 25px;
-  height: 95vh;
   margin-top: 3em;
 }
 
 .CityMenu {
-  
   border-radius: 25px 0px 0px 25px;
   display: grid;
-  grid-template-rows: repeat(auto-fit, minmax(50px, 1fr));
+  grid-template-rows: 150px 150px;
   grid-gap: 1em;
   align-items: center;
   padding: 2em;
@@ -487,23 +487,22 @@ h1 {
 
 .CityPlaces {
   background-color: #f6b05552;
-  border-radius: 0px 0px 0px 0px;
+  border-radius: 25px;
   display: grid;
   align-items: center;
   padding: 2em;
   grid-gap: 1em;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto, 1fr);
 }
 
 .CityPlaces2 {
   background-color: #11919552;
-  border-radius: 0px 25px 25px 0px;
+  border-radius: 25px;
   display: grid;
   align-items: center;
   padding: 2em;
   grid-gap: 1em;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto, 1fr);
   grid-template-rows: 1fr 1fr 1fr 1fr;
 }
 
@@ -514,8 +513,8 @@ h1 {
   align-items: center;
   padding: 2em;
   grid-gap: 1em;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto, 1fr);
+  grid-template-rows: repeat(4, 1fr);
 }
 
 .PlaceAsset {
@@ -654,8 +653,8 @@ h1 {
 }
 
 .CityBT:hover {
-  background-color: #0a79beb7;
-  color: #fff;
+  background-color: #ffb34f65;
+  color: rgba(255, 255, 255, 0.555);
 }
 
 .PLheader {
