Update on places

--- a/packages/react-app/src/styles/index.css
+++ b/packages/react-app/src/styles/index.css
@@ -493,6 +493,7 @@ h1 {
   padding: 2em;
   grid-gap: 1em;
   grid-template-columns: repeat(auto, 1fr);
+  grid-template-rows: repeat(4, 1fr);
 }
 
 .CityPlaces2 {
@@ -503,7 +504,7 @@ h1 {
   padding: 2em;
   grid-gap: 1em;
   grid-template-columns: repeat(auto, 1fr);
-  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-rows: repeat(4, 1fr);
 }
 
 .CityPlaces3 {
