--- a/packages/react-app/src/styles/App.css
+++ b/packages/react-app/src/styles/App.css
@@ -1,6 +1,7 @@
 .center {
   text-align: center;
 }
+
 .HomeCon {
   display: flex; 
   flex-direction: column; 
@@ -15,15 +16,12 @@
   height: 35vh;
   width: 35vh;
   margin-bottom: 5em;
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 25%;
 }
 
-.HomeBT {
-  margin: 0 3em 0 3em;
-  padding: 0.5em 1em 0.5em 1em;
-  background-color: #AAA6A150;
-  border-radius: 25px;
-  font-size: 2em;
-}
 
 .HomeBT:hover {
   background-color: #F6AF55;
@@ -91,6 +89,11 @@
 }
 
 @media (min-width: 1280px) { 
+  
+  .disconnect, .disconnect2 {
+    padding: 0.25em 1em 0.25em 1em !important;
+    font-size: 1.2em !important;
+  }
   .hero {
     padding: 10em 5em 0 5em;
     height: 100vh;
@@ -114,8 +117,8 @@
     width: 600px;
   }
   .topHud {
-    grid-template-columns: repeat(5, minmax(0, 1fr)) !important;
-    padding: 0 15em 0 15em;
+    padding: 0 10em 0 10em;
+    width: 100% !important;
   }
   .rightHud {
     grid-template-columns: 1fr !important; 
@@ -129,22 +132,9 @@
     bottom: auto !important; 
   }
 
-  .hud0{
-    grid-column: span 1 / span 1 !important; 
-    border-radius: 0 0 0 25px !important;
-  }
-  .hud1{
-    grid-column: span 1 / span 1 !important; 
-  }
-  .hud2{
-    grid-column: span 1 / span 1 !important;
-    border-radius:  0 0 0 0 !important;
-  }
-  .hud3{
-    grid-column: span 1 / span 1 !important; 
-  }
-  .hud4{
-    grid-column: span 1 / span 1 !important; 
+  
+  .hud1, .hud2, .hud3 {
+    padding: 0.25em 0.5em 0.25em 0.5em !important;
   }
   .huda{
     border-radius: 0 25px 0 0 !important;
