--- a/packages/react-app/src/styles/App.css
+++ b/packages/react-app/src/styles/App.css
@@ -19,7 +19,7 @@
   position: fixed;
   left: 50%;
   transform: translateX(-50%);
-  bottom: 25%;
+  bottom: 40%;
 }
 
 
@@ -90,6 +90,9 @@
 
 @media (min-width: 1280px) { 
   
+  .connect {
+    bottom: 20% !important; 
+  }
   .disconnect, .disconnect2 {
     padding: 0.25em 1em 0.25em 1em !important;
     font-size: 1.2em !important;
@@ -115,6 +118,7 @@
   .logo {
     height: 600px;
     width: 600px;
+    bottom: 20%;
   }
   .topHud {
     padding: 0 10em 0 10em;
