--- a/packages/react-app/src/styles/Hud.css
+++ b/packages/react-app/src/styles/Hud.css
@@ -12,6 +12,16 @@ Nav {
   z-index: 20;
 }
 
+.locked {
+  background-color: #212121;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  
+}
+
 .connect {
   position: fixed;
   bottom: 35%; 
@@ -21,7 +31,7 @@ Nav {
   background-color: #AAA6A150;
   border-radius: 25px;
   font-size: 3em;
-
+  z-index: 20;
 }
 
 .disconnect {
