--- a/packages/react-app/src/styles/App.css
+++ b/packages/react-app/src/styles/App.css
@@ -218,4 +218,14 @@
     width: 40%;
     top: 10%;
   }
+
+  .AllDiv {
+    width: 80%;
+    top: 10%;
+  }
+  
+  .CityPlaces3 {
+    grid-template-columns: repeat(7, minmax(0, 1fr)); 
+    grid-template-rows: repeat(4, minmax(0, 1fr)); 
+  }
 }
