--- a/packages/react-app/src/styles/App.css
+++ b/packages/react-app/src/styles/App.css
@@ -223,6 +223,15 @@
     width: 80%;
     top: 10%;
   }
+
+  .CityDiv {
+    grid-template-columns: 1fr 1fr;
+    margin: 8em 10em 0em 10em;
+  }
+
+  .CityPlaces {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
   
   .CityPlaces3 {
     grid-template-columns: repeat(7, minmax(0, 1fr)); 
