--- a/packages/react-app/src/styles/App.css
+++ b/packages/react-app/src/styles/App.css
@@ -237,4 +237,9 @@
     grid-template-columns: repeat(7, minmax(0, 1fr)); 
     grid-template-rows: repeat(4, minmax(0, 1fr)); 
   }
+
+  .alertBT {
+    width: 25% !important;
+    border-radius: 25px;
+  }
 }
